# hummingbird

./: .gitignore  .gitmodules  .travis.yml  README.md  setup_odroid.sh
apriltags2_ros/: .gitignore  README.md  Tags Benchmark.xlsx
apriltags2_ros/apriltags2_ros/src/: continuous_pose_detector.cpp  tag_detector.cpp
hummingbird/: CMakeLists.txt  package.xml
hummingbird/config/mavros/: simulation.yaml  vicon.yaml
hummingbird/launch/: camera_test.launch  hummingbird.launch  hummingbird_detection.launch  hummingbird_gazebo.launch  hummingbird_simulation.launch
hummingbird/launch/components/: simulation.launch
hummingbird/rviz/: hummingbird.rviz
hummingbird/scripts/: gazebo.desktop  gazebo.sh  launch.sh  launch_computeronly.sh
hummingbird_apriltags/apriltags2_ros/: CMakeLists.txt
hummingbird_apriltags/apriltags2_ros/config/: tags.yaml
hummingbird_design/: README.md
hummingbird_design/CAD Files/: Hummingbird_V3_MECH.STEP
hummingbird_design/Docking Simulink/: auto_takeoff.m  bezier.m  changePoseTrajectory.m  connectRobot.m  executeCircle.m  executeRelativeCircle.m  find_trajectory.m  hummingbird.slx  hummingbirdLibrary.slx  init.m  land.m  loadRobot.m  placelabel.m  tailsitter_bezier_path.m
hummingbird_design/Docking Simulink/msgs/mavros_msgs/: package.xml
hummingbird_joy/: CMakeLists.txt  package.xml
hummingbird_joy/scripts/: main.py
hummingbird_matlab/: apply_transform.m  calculate_transform.m  camera_test.m  get_transforms.m  parse_real_bag.m  parse_sim_bag.m  plot_ulg_graphs.m  processGazeboStates.m  processTransforms.m  ts_model.m
hummingbird_odometry/: CMakeLists.txt  package.xml
hummingbird_odometry/include/: EigenTools.hpp  OrientationMeasurementModel.hpp  PositionMeasurementModel.hpp  SystemModel.hpp
hummingbird_odometry/include/kalman/: ExtendedKalmanFilter.hpp  LinearizedSystemModel.hpp  SystemModel.hpp
hummingbird_odometry/launch/: odometry.launch
hummingbird_odometry/src/: OrientationMeasurementModel.hpp  PositionMeasurementModel.hpp  SystemModel.hpp  odometry_node.cpp  tag_location_publisher.cpp  transformations_yaml_parser.cpp  ts_location_estimator.cpp  ts_location_publisher.cpp
hummingbird_px4/: .gitmodules  CMakeLists.txt  Makefile  package.xml
hummingbird_px4/NuttX/nuttx/drivers/serial/: serial.c
hummingbird_px4/NuttX/nuttx/include/nuttx/serial/: tioctl.h
hummingbird_px4/SDCARD/etc/: config.txt  rc.txt
hummingbird_px4/SDCARD/etc/logging/: logger_topics.txt
hummingbird_px4/Tools/: setup_gazebo.bash
hummingbird_px4/cmake/common/: px4_base.cmake
hummingbird_px4/integrationtests/: run_tests.bash
hummingbird_px4/launch/: ardrone.launch  example.launch  gazebo.launch  gazebo_ardrone_empty_world.launch  gazebo_ardrone_empty_world_offboard_attitudedemo.launch  gazebo_ardrone_empty_world_offboard_positiondemo.launch  gazebo_ardrone_house_world.launch  gazebo_iris_empty_world.launch  gazebo_iris_house_world.launch  gazebo_iris_outdoor_world.launch  iris.launch  mavros.launch  mavros_default.launch  mavros_posix_sitl.launch  mavros_posix_tests_iris.launch  mavros_posix_tests_iris_opt_flow.launch  mavros_posix_tests_standard_vtol.launch  mavros_sitl.launch  multi_uav.launch  multicopter.launch  multicopter_w.launch  multicopter_x.launch  posix_sitl.launch
hummingbird_px4/mavlink/include/mavlink/v1.0/common/: version.h
hummingbird_px4/mavlink/include/mavlink/v2.0/common/: version.h
hummingbird_px4/nuttx-configs/px4fmu-v4/nsh/: Make.defs  defconfig
hummingbird_px4/src/firmware/posix/: sitl_target.cmake
hummingbird_px4/src/modules/commander/: commander.cpp  commander_params.c
hummingbird_px4/src/modules/local_position_estimator/: params.c
hummingbird_px4/src/modules/mavlink/: mavlink_main.cpp  mavlink_main.h  mavlink_params.c  mavlink_receiver.cpp
hummingbird_px4/src/modules/mc_pos_control/: mc_pos_control_main.cpp  mc_pos_control_params.c
hummingbird_px4/src/modules/navigator/: mission_params.c  navigator_main.cpp
hummingbird_px4/src/modules/simulator/: CMakeLists.txt
hummingbird_px4/src/modules/ts_att_control/: ts_att_control_main.cpp  ts_att_control_params.c
hummingbird_px4/src/modules/ts_path_planner/: ts_path_planner.h  ts_path_planner_main.cpp  ts_path_planner_params.c
hummingbird_px4/src/modules/uavcan/libuavcan/libuavcan/: CMakeLists.txt
hummingbird_px4/src/modules/uavcan/libuavcan/libuavcan_drivers/stm32/driver/: CMakeLists.txt
hummingbird_px4/src/systemcmds/tests/: test_matrix.cpp
hummingbird_sitl_gazebo/: CMakeLists.txt  README.md  package.xml
hummingbird_sitl_gazebo/include/: gazebo_ts_aerodynamic_plugin.h
hummingbird_sitl_gazebo/models/hummingbird/: hummingbird.gazebo  hummingbird.sdf  hummingbird.xacro  hummingbird_body.xacro  hummingbird_fixed.xacro  model.config
hummingbird_sitl_gazebo/models/hummingbird/components/: camera.xacro  elevon.xacro  imu.xacro  rotor.xacro  tag.xacro
hummingbird_sitl_gazebo/models/hummingbird/meshes/: hummingbird.sdf
hummingbird_sitl_gazebo/models/hummingbird_fixed/: hummingbird_fixed.sdf  model.config
hummingbird_sitl_gazebo/models/rplidar/: model.sdf
hummingbird_sitl_gazebo/src/: gazebo_ts_aerodynamic_plugin.cpp
hummingbird_sitl_gazebo/worlds/: hummingbird.world
hummingbird_vicon/: CMakeLists.txt  package.xml
hummingbird_vicon/src/: hummingbird_vicon_node.cpp
launcher/: package.xml
launcher/launch/: hummingbird.launch  hummingbird_gazebo.launch
realsense_gazebo_plugin/src/: gazebo_ros_realsense.cpp
scripts/: build.desktop  build.sh  launch.desktop  launch_computeronly.desktop
src/odometry/: CMakeLists.txt  package.xml
src/odometry/src/: odometry_node.cpp  (+2 more)
static_tf_publisher/: CMakeLists.txt  package.xml
static_tf_publisher/config/camera_test/: transformations.yaml
static_tf_publisher/config/simulation/: transformations.yaml
static_tf_publisher/include/: static_tf_publisher.hpp
static_tf_publisher/launch/: static_tf_publisher.launch
static_tf_publisher/src/: static_tf_publisher.cpp  static_tf_publisher_node.cpp
tf_to_posestamped/: CMakeLists.txt  package.xml
tf_to_posestamped/src/: tf_to_posestamped_node.cpp
(+55 files in other folders)
