<?xml version="1.0"?>
<package format="2">
  <name>hummingbird</name>
  <version>0.0.0</version>
  <description>Launcher files for the tailsitter</description>
  <maintainer email="jiashen.wang@robotics.utias.utoronto.ca">Jason</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>hummingbird_odometry</depend>
  <depend>realsense_gazebo_plugin</depend>
  <depend>apriltags2_ros</depend>
  <depend>vicon_bridge</depend>


</package>
