<?xml version="1.0"?>
<package format="2">
  <name>hummingbird_joy</name>
  <version>0.0.0</version>
  <description>The hummingbird_joy package</description>

  <maintainer email="rahman.a.qureshi@gmail.com">Rahman Qureshi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>joy</depend>
  <depend>sensor_msgs</depend>
  <depend>mavros_msgs</depend>

</package>
