<?xml version="1.0"?>
<package format="2">
  <name>hummingbird_odometry</name>
  <version>0.0.0</version>
  <description>The odometry package</description>

  <maintainer email="jiashen.wang@robotics.utias.utoronto.ca">Jason</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>apriltag_ros</depend>

</package>
