<?xml version="1.0"?>
<package format="2">
  <name>hummingbird_vicon</name>
  <version>0.0.0</version>
  <description>This package publishes listens for /tf for vicon measurements and republishes them to /mavros/mocap/pose</description>

  <maintainer email="rahman.a.qureshi@gmail.com">Abdurrahman Qureshi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
  </export>

</package>
