<?xml version="1.0"?>
<package format="2">
  <name>static_tf_publisher</name>
  <version>0.0.0</version>
  <description>The static_tf_publisher package. Parses a YAML file and publishes the transforms to /tf_static.</description>

  <maintainer email="rahman.a.qureshi@gmail.com">Abdurrahman Qureshi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>eigen</depend>

  <export>
  </export>
</package>
