<?xml version="1.0"?>
<package>
  <name>mavros_msgs</name>
  <version>1.0</version>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geographic_msgs</build_depend>

</package>


